@@ -23,7 +23,6 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -52,43 +51,6 @@ import com.puppycrawl.tools.checkstyle.utils.CommonUtil;
  * text as a suppression and will likely suppress all audit events in the file. It is
  * best to set this to a key phrase not commonly used in the file to help denote it
  * out of the rest of the file as a suppression. See the default value as an example.
- * </p>
- * <ul>
- * <li>
- * Property {@code checkPattern} - Specify check name pattern to suppress.
- * Property can also be a RegExp group index at {@code nearbyTextPattern} in
- * format of {@code $x} and be picked from line that matches {@code nearbyTextPattern}.
- * Type is {@code java.util.regex.Pattern}.
- * Default value is {@code ".*"}.
- * </li>
- * <li>
- * Property {@code idPattern} - Specify check ID pattern to suppress.
- * Type is {@code java.util.regex.Pattern}.
- * Default value is {@code null}.
- * </li>
- * <li>
- * Property {@code lineRange} - Specify negative/zero/positive value that
- * defines the number of lines preceding/at/following the suppressing nearby text.
- * Property can also be a RegExp group index at {@code nearbyTextPattern} in
- * format of {@code $x} and be picked from line that matches {@code nearbyTextPattern}.
- * Type is {@code java.lang.String}.
- * Default value is {@code "0"}.
- * </li>
- * <li>
- * Property {@code messagePattern} - Specify check violation message pattern to suppress.
- * Type is {@code java.util.regex.Pattern}.
- * Default value is {@code null}.
- * </li>
- * <li>
- * Property {@code nearbyTextPattern} - Specify nearby text
- * pattern to trigger filter to begin suppression.
- * Type is {@code java.util.regex.Pattern}.
- * Default value is {@code "SUPPRESS CHECKSTYLE (\w+)"}.
- * </li>
- * </ul>
- *
- * <p>
- * Parent is {@code com.puppycrawl.tools.checkstyle.Checker}
  * </p>
  *
  * @since 10.10.0
@@ -229,7 +191,7 @@ public class SuppressWithNearbyTextFilter extends AbstractAutomaticBean implemen
      * @throws IllegalStateException if the file could not be read.
      */
     private static FileText getFileText(String fileName) {
-        final Path path = Paths.get(fileName);
+        final Path path = Path.of(fileName);
         FileText result = null;
 
         // some violations can be on a directory, instead of a file
