@@ -20,9 +20,6 @@
 package com.puppycrawl.tools.checkstyle.site;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Set;
-import java.util.regex.Pattern;
 
 import org.apache.maven.doxia.macro.AbstractMacro;
 import org.apache.maven.doxia.macro.Macro;
@@ -32,7 +29,6 @@ import org.apache.maven.doxia.sink.Sink;
 import org.codehaus.plexus.component.annotations.Component;
 
 import com.puppycrawl.tools.checkstyle.api.DetailNode;
-import com.puppycrawl.tools.checkstyle.meta.JavadocMetadataScraper;
 import com.puppycrawl.tools.checkstyle.utils.CommonUtil;
 
 /**
@@ -41,16 +37,10 @@ import com.puppycrawl.tools.checkstyle.utils.CommonUtil;
 @Component(role = Macro.class, hint = "notes")
 public class NotesMacro extends AbstractMacro {
 
-    /** "Notes:" line with new line accounted. */
-    public static final Pattern NOTES_LINE_WITH_NEWLINE = Pattern.compile("\r?\n\\s?"
-        + ModuleJavadocParsingUtil.NOTES);
-
     @Override
     public void execute(Sink sink, MacroRequest request) throws MacroExecutionException {
-        final Path modulePath = Paths.get((String) request.getParameter("modulePath"));
+        final Path modulePath = Path.of((String) request.getParameter("modulePath"));
         final String moduleName = CommonUtil.getFileNameWithoutExtension(modulePath.toString());
-
-        final Set<String> propertyNames = ModuleJavadocParsingUtil.getPropertyNames(moduleName);
 
         final DetailNode moduleJavadoc = SiteUtil.getModuleJavadoc(moduleName, modulePath);
         if (moduleJavadoc == null) {
@@ -58,39 +48,11 @@ public class NotesMacro extends AbstractMacro {
                 "Javadoc of module " + moduleName + " is not found.");
         }
 
-        final int notesStartIndex = ModuleJavadocParsingUtil
-            .getNotesSectionStartIndex(moduleJavadoc);
-        final int notesEndIndex = getNotesEndIndex(moduleJavadoc, propertyNames);
-
-        final String unprocessedModuleNotes = JavadocMetadataScraper.constructSubTreeText(
-            moduleJavadoc, notesStartIndex, notesEndIndex);
-        final String moduleNotes = NOTES_LINE_WITH_NEWLINE.matcher(unprocessedModuleNotes)
-            .replaceAll("");
+        final String moduleNotes =
+            ModuleJavadocParsingUtil.getModuleNotes(moduleJavadoc);
 
         ModuleJavadocParsingUtil.writeOutJavadocPortion(moduleNotes, sink);
 
-    }
-
-    /**
-     * Gets the end index of the Notes.
-     *
-     * @param moduleJavadoc javadoc of module.
-     * @param propertyNamesSet Set with property names.
-     * @return the end index.
-     */
-    private static int getNotesEndIndex(DetailNode moduleJavadoc,
-                                        Set<String> propertyNamesSet) {
-        int notesEndIndex = -1;
-
-        if (propertyNamesSet.isEmpty()) {
-            notesEndIndex += ModuleJavadocParsingUtil.getParentSectionStartIndex(moduleJavadoc);
-        }
-        else {
-            notesEndIndex += ModuleJavadocParsingUtil.getPropertySectionStartIndex(
-                moduleJavadoc, propertyNamesSet);
-        }
-
-        return notesEndIndex;
     }
 
 }
